# conative-gating

./: .editorconfig  .gitignore  ABI-FFI-README.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  ECOSYSTEM.scm  EXPLAINME.adoc  Justfile  MAINTAINERS.adoc  META.scm  PROOF-NEEDS.md  PROTOTYPE.adoc  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  README.adoc  README.md  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  SONNET-TASKS.md  STATE.scm  TEST-NEEDS.md  TOPOLOGY.md  arcvix-conative-gating.tex  codemeta.json  contractile.just  flake.nix  guix.scm  justfile  llm-warmup-dev.md  llm-warmup-user.md  setup.sh  stapeln.toml
.claude/: CLAUDE.md
.github/: FUNDING.yml
.github/workflows/: cflite_batch.yml  cflite_pr.yml  ci.yml  codeql.yml  guix-nix-policy.yml  hypatia-scan.yml  instant-sync.yml  language-guard.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  rsr-antipattern.yml  rust-ci.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  security-policy.yml  ts-blocker.yml  wellknown-enforcement.yml  workflow-linter.yml
.hypatia/: activity.jsonl  last-visit.json
.hypatia/scan-cache/: fix-http-to-https.hashes
.machine_readable/: ADJUST.contractile  AGENTIC.scm  CLADE.a2ml  ECOSYSTEM.scm  INTENT.contractile  META.scm  MUST.contractile  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm  TRUST.contractile
.machine_readable/6a2/: ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/svc/: README.adoc
.well-known/: ai.txt  dc.xml  humans.txt  provenance.json  security.txt
Src/Abi/: Foreign.idr  Gating.idr  Proofs.idr  Types.idr
benches/: contract_bench.rs  oracle_bench.rs
config/: policy.ncl  schema.ncl
contractiles/intend/: Intentfile.a2ml
contractiles/trust/: Trustfile.a2ml
docs/: BADGE_SCHEMA.adoc  CICD_HYPER_A_INTEGRATION.adoc  CITATIONS.adoc  DIRECTORY_STRUCTURE.adoc  GRIMREPO_SCRIPTS.adoc  MAAF_INTEGRATION.adoc  REPO_CONSISTENCY.adoc  REPO_STANDARDIZATION.adoc  REPO_TRACKER.csv  REPO_VARIATIONS.adoc  STATE_ECOSYSTEM_SCHEMA.adoc  VSH_IMPROVEMENTS.adoc  ZOTERHO_INTEGRATION.adoc  tech-debt-2026-05-26.md
ffi/zig/src/: main.zig
fuzz/: Cargo.toml
nix/: flake.nix
scripts/: apply-common-files.sh  apply-justfiles.sh  bulk-standardize.sh  deploy-templates.sh  generate-badges.sh  github-bulk-settings.sh  github-settings.sh  mass-apply-templates.sh  reconcile-wharf-repos.sh
src/: main.rs
src/arbiter/: mix.exs
src/arbiter/lib/conative_gating/: application.ex  consensus_arbiter.ex
src/contract/: Cargo.toml
src/contract/src/: lib.rs
src/oracle/: Cargo.toml
src/oracle/src/: lib.rs
src/slm/: Cargo.toml
src/slm/src/: lib.rs
templates/: .editorconfig.template  .gitignore.template  .gitlab-ci.yml.template  CITATION.cff.template  CITATIONS.adoc.template  CONTRIBUTING.adoc.template  CONTRIBUTING.md.template  Containerfile.distroless.template  Containerfile.wolfi.template  LICENSE.txt.template  RSR_COMPLIANCE.adoc.template  STATE-bunsenite.scm.template  STATE-echidna.scm.template  STATE-kith.scm.template  STATE-vext.scm.template  STATE-vsh.scm.template  STATE-wordpress-wharf.scm.template  STATE-zoterho-template.scm.template  STATE.scm.template  aibdp.json.template  codemeta.json.template  dc.xml.template  flake.nix.template  guix-channel.scm.template  justfile-hooks.template  justfile.template  pre-commit.template  rsr-antipattern.yml.template  rsr-metadata.ncl
templates/.github/workflows/: ci.yml.template
templates/.well-known/: ai.txt.template  humans.txt.template  provenance.json.template  security.txt.template
templates/hooks/: install-hooks.sh  post-receive.template  pre-commit.template  pre-push.template
templates/salt/minion.d/: minion.conf.template
templates/salt/states/: cicd.sls.template  development.sls.template
templates/serum/: mix.exs.template  serum.exs.template
templates/wordpress/: functions.php.template  justfile.template  sinople-deployment.template  style.css.template
tests/: gating_pipeline_test.rs  property_test.rs  security_aspect_test.rs
training/: README.adoc
training/compliant/: elixir_genserver.json  rust_helper.json
training/edge_cases/: obfuscated_logic.json  python_exception_valid.json  verbose_rust.json
training/redteam/boundary/: empty_file.json  unicode_extension.json  whitespace_only.json
training/redteam/bypass/: python_in_comments.json  typescript_as_json.json  typescript_in_markdown.json
training/redteam/encoding/: base64_secret.json  hex_secret.json
training/redteam/injection/: concatenated_secret.json  polyglot_file.json  secret_in_url.json
training/redteam/obfuscation/: case_variation.json  hidden_extension.json  split_typescript_markers.json
training/violations/: 01-infrastructure.md  02-documentation.md  03-security.md  04-architecture.md  05-web-standards.md  06-semantic-web.md  07-licensing.md  08-ergonomics.md  09-lifecycle.md  10-governance.md  11-accountability.md  12-language-policy.md  hardcoded_secret.json  npm_without_deno.json  typescript_file.json
