[package]
name = "conative-gating"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan@hyperpolymath.org>"]
description = "SLM-as-Cerebellum for LLM Policy Enforcement"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/conative-gating"

[workspace]
members = [
    "src/oracle",
    "src/slm",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
regex = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"

[dependencies]
policy-oracle = { path = "src/oracle" }
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "conative"
path = "src/main.rs"
