[package]
name = "conative-gating"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "SLM-as-Cerebellum for LLM Policy Enforcement"
license = "PMPL-1.0-or-later"
repository = "https://github.com/hyperpolymath/conative-gating"

[workspace]
members = [
    "src/oracle",
    "src/slm",
    "src/contract",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3"
regex = "1"
clap = { version = "4", features = ["derive", "env", "unicode", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.3"

[dependencies]
policy-oracle = { path = "src/oracle" }
gating-contract = { path = "src/contract" }
clap.workspace = true
chrono.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "oracle_bench"
harness = false

[[bench]]
name = "contract_bench"
harness = false

[[bin]]
name = "conative"
path = "src/main.rs"
