# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2025 Jonathan D.A. Jewell

[package]
name = "gating-contract"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <jonathan@hyperpolymath.org>"]
description = "Testable gating contract: inputs, outputs, refusal taxonomy, audit logging"
license = "AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/conative-gating"

[dependencies]
policy-oracle = { path = "../oracle" }
slm-evaluator = { path = "../slm" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
