# SPDX-License-Identifier: MPL-2.0
# Copyright (C) 2025 Jonathan D.A. Jewell

[package]
name = "gating-contract"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "Testable gating contract: inputs, outputs, refusal taxonomy, audit logging"
license = "MPL-2.0"
repository = "https://github.com/hyperpolymath/conative-gating"

[dependencies]
policy-oracle = { path = "../oracle" }
slm-evaluator = { path = "../slm" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
