[package]
name = "policy-oracle"
version = "0.1.0"
edition = "2021"
description = "Deterministic policy rule checker"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
glob = "0.3"
regex = "1"
