[package]
name = "slm-evaluator"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <j.d.a.jewell@open.ac.uk>"]
description = "SLM bindings for adversarial policy evaluation"
license = "PMPL-1.0-or-later"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
# llama-cpp-2 = "0.1"  # Uncomment when ready for SLM integration
